# django_nested_admin_test

./: .gitignore  manage.py  pyproject.toml  requirements.txt
django_nested_admin_test/: settings.py  urls.py  wsgi.py
survey/: admin.py  models.py
survey/migrations/: 0001_initial.py
